--- a/res/menu/wiki.xml
+++ b/res/menu/wiki.xml
@@ -1,9 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
-
+    <item  android:id="@+id/item1" 
+      android:title="Show another WIKI-PAGE"/>  
+  
+    <item  android:id="@+id/item2"   
+        android:title="List the  WIKI PAGES available"/>  
+     
+<item  android:id="@+id/item2"   
+        android:title="Logout"/>  
+    
+    
+    
+    
 </menu>
