--- a/res/menu/ticket.xml
+++ b/res/menu/ticket.xml
@@ -1,9 +1,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+      <item  android:id="@+id/item5" 
+      android:title="Create a new Ticket"/>        
+    
+    
+    
+    <item  android:id="@+id/item4" 
+      android:title="List All Tickets"/>    
+        
+        
+        <item  android:id="@+id/item1" 
+      android:title="List Active Tickets"/>  
+  
+    <item  android:id="@+id/item2"   
+        android:title="List Tickets per Milestone" />  
+     
+<item  android:id="@+id/item3"   
+        android:title="LOGOUT" />  
+    
 
 </menu>
