--- a/res/menu/ticket_activity_view.xml
+++ b/res/menu/ticket_activity_view.xml
@@ -17,7 +17,9 @@
       
         <item  android:id="@+id/item5" 
       android:title="Modify Ticket"/>  
-                    
+       
+          <item  android:id="@+id/item6" 
+      android:title="Delete Ticket"/> 
                     
 
 </menu>
