--- a/res/menu/ticket_activity_view.xml
+++ b/res/menu/ticket_activity_view.xml
@@ -20,6 +20,9 @@
        
           <item  android:id="@+id/item6" 
       android:title="Delete Ticket"/> 
+      
+          <item  android:id="@+id/item6" 
+      android:title="Reopen Ticket"/> 
                     
 
 </menu>
