--- a/res/layout/activity_ticket.xml
+++ b/res/layout/activity_ticket.xml
@@ -184,7 +184,20 @@
 			                android:src="@drawable/icon_menu"
 			                android:visibility="visible" />
 			      
+			            <ImageView
+			                android:id="@+id/imageViewButton"
+			                android:layout_width="wrap_content"
+			                android:layout_height="wrap_content"
+			                android:layout_alignParentRight="true"
+			                android:layout_centerVertical="true"
+			                android:clickable="true"
+			                android:src="@android:drawable/ic_menu_more" />
+			            
+			            
+			            
   				</RelativeLayout>
+        		
+        		
         		<LinearLayout
                 android:id="@+id/slidingPanel"
                 android:layout_width="fill_parent"
