--- a/res/layout/activity_ticket_activity_view.xml
+++ b/res/layout/activity_ticket_activity_view.xml
@@ -1,5 +1,210 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="match_parent" 
+    android:layout_weight="1"
+    android:background="@drawable/blue_bg">
+    
+    
+    <!-- Menu Panel -->
+    <RelativeLayout
+           android:id="@+id/menuPanel"
+           android:layout_height="match_parent"
+           android:layout_width="wrap_content"
+           android:gravity="right"
+           android:background="@drawable/gray_bg"
+           android:orientation="vertical" >
+       
+            <Button
+                android:id="@+id/menu_title_1"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="0dp" 
+                android:paddingLeft="15dp"             
+                android:gravity="center_vertical"
+                android:background="#A52A2A"
+                android:textColor="@android:color/white"
+                android:text="LOGGED AS luca92"
+                android:textStyle="bold">     
+            </Button>
+            
+            <View
+		        android:id="@+id/menu_item_divider_1"
+		        android:layout_width="fill_parent"
+		        android:layout_height="0.5dp"
+		        android:layout_marginLeft="0dp"
+		        android:layout_marginRight="0dp"
+		        android:layout_below="@+id/menu_title_1"
+		        android:background="#b5b5b5"/>
+            
+            <Button
+                android:id="@+id/menu_item_1"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="15dp"             
+                android:gravity="center_vertical"
+                android:layout_below="@+id/menu_item_divider_1"
+                android:text="WIKI"
+               
+                >     
+            </Button>     
+             <View
+		        android:id="@+id/menu_item_divider_2"
+		        android:layout_width="fill_parent"
+		        android:layout_height="0.5dp"
+		        android:layout_marginLeft="5dp"
+		        android:layout_marginRight="5dp"
+		        android:layout_below="@+id/menu_item_1"
+		        android:background="#b5b5b5"/> 
+            <Button
+                android:id="@+id/menu_item_2"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:layout_below="@+id/menu_item_divider_2"
+                android:layout_marginLeft="15dp"
+                android:gravity="center_vertical"
+                android:text="View Tickets">
+            </Button>
+            
+            <View
+		        android:id="@+id/menu_item_divider_3"
+		        android:layout_width="fill_parent"
+		        android:layout_height="0.5dp"
+		        android:layout_marginLeft="5dp"
+		        android:layout_marginRight="5dp"
+		        android:layout_below="@+id/menu_item_2"
+		        android:background="#b5b5b5"/> 
+		        
+            
+            <Button
+                android:id="@+id/menu_item_3"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:layout_below="@+id/menu_item_divider_3"
+                android:layout_marginLeft="15dp"
+                android:gravity="center_vertical"
+                android:text="Roadmap" >
+
+            </Button>
+            
+    
+      
+            <View
+		        android:id="@+id/menu_item_divider_4"
+		        android:layout_width="fill_parent"
+		        android:layout_height="0.5dp"
+		        android:layout_marginLeft="5dp"
+		        android:layout_marginRight="5dp"
+		        android:layout_below="@+id/menu_item_3"
+		        android:background="#b5b5b5"/> 
+		        
+            
+            <Button
+                android:id="@+id/menu_item_4"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:layout_below="@+id/menu_item_divider_4"
+                android:layout_marginLeft="15dp"
+                android:gravity="center_vertical"
+                android:text="Search" >
+            </Button>
+            
+            
+             <View
+		        android:id="@+id/menu_item_divider_5"
+		        android:layout_width="fill_parent"
+		        android:layout_height="30dp"
+		        android:layout_marginLeft="5dp"
+		        android:layout_marginRight="5dp"
+		        android:layout_below="@+id/menu_item_4"
+		       /> 
+		        
+             
+             
+             
+		        
+            
+            <Button
+                android:id="@+id/menu_item_5"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:layout_below="@+id/menu_item_divider_5"
+                android:layout_marginLeft="15dp"
+                android:gravity="center_vertical"
+                android:text="LOGOUT"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                 >
+            </Button>
+
+		   
+            </RelativeLayout>
+            
+    
+    
+    <!-- Sliding Panel -->     
+		
+		
+		
+		
+		
+		
+		<LinearLayout
+                android:id="@+id/slidingPanel"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:gravity="left"
+                android:orientation="vertical"
+                android:background="@android:color/white" 
+    
+                >
+       <RelativeLayout
+		            android:id="@+id/header"
+		            android:layout_width="match_parent"
+		            android:layout_height="40dp"
+		            android:background="#800000" >
+   
+		          	<View
+		                android:id="@+id/header_vertical_divider_1"
+		                android:layout_width="2dp"
+		                android:layout_height="fill_parent"
+		                android:layout_alignParentTop="true"
+		                android:layout_marginLeft="15dp"
+		                android:layout_toRightOf="@+id/menuViewButton"
+		                android:background="#800000" />
+  
+			            <ImageView
+			                android:id="@+id/menuViewButton"
+			                android:layout_width="wrap_content"
+			                android:layout_height="wrap_content"
+			                android:layout_alignParentLeft="true"
+			                android:layout_centerVertical="true"
+			                android:layout_marginLeft="15dp"
+			                android:clickable="true"
+			                android:src="@drawable/icon_menu"
+			                android:visibility="visible" />
+			      
+			            <ImageView
+			                android:id="@+id/imageViewButton"
+			                android:layout_width="wrap_content"
+			                android:layout_height="wrap_content"
+			                android:layout_alignParentRight="true"
+			                android:layout_centerVertical="true"
+			                android:clickable="true"
+			                android:src="@android:drawable/ic_menu_more" />
+			            
+			            
+			            
+  				</RelativeLayout>
+        		
+
+
+
+
+
+<TableLayout
     android:id="@+id/tableLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
@@ -170,4 +375,4 @@
         android:layout_weight="2.09"
         android:src="@drawable/trac" />
 
-</TableLayout>
+</TableLayout></LinearLayout></FrameLayout>
