--- a/res/layout/activity_wiki.xml
+++ b/res/layout/activity_wiki.xml
@@ -188,6 +188,15 @@
 			                android:clickable="true"
 			                android:src="@drawable/icon_menu"
 			                android:visibility="visible" />
+
+			            <ImageView
+			                android:id="@+id/imageViewButton"
+			                android:layout_width="wrap_content"
+			                android:layout_height="wrap_content"
+			                android:layout_alignParentRight="true"
+			                android:layout_centerVertical="true"
+			                android:clickable="true"
+			                android:src="@android:drawable/ic_menu_more" />
 			      
   				</RelativeLayout>
         		<LinearLayout
