--- a/res/menu/ticket.xml
+++ b/res/menu/ticket.xml
@@ -1,6 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-      <item  android:id="@+id/item5" 
+
+
+<item android:id="@+id/action_search"
+          android:icon="@drawable/icon_menu"
+          android:title="action_search"
+          android:showAsAction="ifRoom" />
+     
+    
+    
+    
+    <item  android:id="@+id/item5" 
       android:title="Create a new Ticket"/>        
     
     
