--- a/res/menu/wiki.xml
+++ b/res/menu/wiki.xml
@@ -1,15 +1,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    
 
-    <item  android:id="@+id/item1" 
-      android:title="Show another WIKI-PAGE"/>  
-  
-    <item  android:id="@+id/item2"   
-        android:title="List the  WIKI PAGES available"/>  
-     
-<item  android:id="@+id/item3"   
-        android:title="Logout"/>  
-    
-    
-    
-    
+<item android:id="@+id/action_search"
+          android:icon="@drawable/icon_menu"
+          android:title="action_search"
+          android:showAsAction="ifRoom" />
+
+   <item
+        android:id="@+id/item1"
+        android:title="Show another WIKI-PAGE"/>
+    <item
+        android:id="@+id/item2"
+        android:title="List the  WIKI PAGES available"/>
+
+
+
+
+
+ -->
+
+
 </menu>
